--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "~4.0.0",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "slug": "^0.9.1"
   }
 }
